--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
 
     <meta charset="UTF-8">
@@ -12,15 +13,17 @@
     <title>App</title>
     <!-- styles -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles/style.min.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
     <!-- scripts -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="scripts/app.min.js"></script>
+    <script src="scripts/app.js"></script>
 </head>
+
 <body>
-<input class="btn btn-success" value="Done">
-<img src="images/wallpaper.jpg" width="200" height="100">
+    <input class="btn btn-success" value="Done">
+    <img src="images/wallpaper.jpg" width="200" height="100">
 </body>
+
 </html>
